Details
-
Bug
-
Resolution: Fixed
-
P4: Low
-
5.9.4
-
None
-
2
-
b44467565 (dev), bebd52936 (6.9), 6fa0dfc03 (6.8), 441dcc20f (tqtc/lts-6.5), c55f05506 (tqtc/lts-5.15)
-
Foundation Sprint 121, Foundation Sprint 122
Description
When a QSerialPort is opened, the signal errorOccurred() is fired with QSerialPort::NoError. It's not really an error but at least annoying and unexpected.
Attachments
For Gerrit Dashboard: QTBUG-67544 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
610568,2 | Doc: clarify QSerialPort::open() error reporting | dev | qt/qtserialport | Status: MERGED | +2 | 0 |
611525,2 | Doc: clarify QSerialPort::open() error reporting | 6.9 | qt/qtserialport | Status: MERGED | +2 | 0 |
611636,2 | Doc: clarify QSerialPort::open() error reporting | 6.8 | qt/qtserialport | Status: MERGED | +2 | 0 |
611683,2 | Doc: clarify QSerialPort::open() error reporting | tqtc/lts-6.5 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |
611687,3 | Doc: clarify QSerialPort::open() error reporting | tqtc/lts-5.15 | qt/tqtc-qtserialport | Status: MERGED | +2 | 0 |